<resources>
    <string name="app_name">BMI</string>
    <string name="mass_kg">MASS [kg]</string>
    <string name="height_m">HEIGHT [m]</string>
    <string name="mass_lb">MASS [lb]</string>
    <string name="height_ft">HEIGHT [in]</string>
    <string name="count">COUNT</string>
    <string name="title_activity_result_bmi">ResultBmiActivity</string>
    <string name="bmi_text">BMI</string>
    <string name="about_author">O autorze</string>
    <string name="title_activity_about_author">AboutAuthorActivity</string>
    <string name="author_name">Marcin Krawczyk</string>
    <string name="enable_imperial_units">Enable imperial units</string>
    <string name="normal_units">Normal units</string>
    <string name="imperial_units">Imperial units</string>
    <string name="save">Save</string>
</resources>
