<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:layout="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/massText"
            android:layout_width="70dp"
            android:layout_height="43dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/mass_kg"
            app:layout_constraintStart_toStartOf="@+id/massInput"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/massInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="mass input"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/massText" />

        <TextView
            android:id="@+id/heightText"
            android:layout_width="76dp"
            android:layout_height="43dp"
            android:layout_marginTop="20dp"
            android:text="@string/height_m"
            app:layout_constraintStart_toStartOf="@+id/massInput"
            app:layout_constraintTop_toBottomOf="@+id/massInput" />

        <EditText
            android:id="@+id/heightInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="height input"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heightText" />

        <Button
            android:id="@+id/countButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="COUNT"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heightInput" />

        <Switch
            android:id="@+id/unitSwitch"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/enable_imperial_units"
            android:textOff="@string/normal_units"
            android:textOn="@string/imperial_units"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countButton" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>